[tool.poetry]
name = "ika-api"
version = "0.1.0"
description = ""
authors = ["devunt <devunt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
uvicorn = {version = "^0.15.0", extras = ["standard"]}
SQLAlchemy = "^1.4.29"
mysqlclient = "^2.1.0"
aioredis = "^2.0.0"
python-multipart = "^0.0.5"
requests = "^2.26.0"
slack-sdk = "^3.13.0"
aiohttp = "~3.7.0"
py-cord = {git = "https://github.com/Pycord-Development/pycord.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
